# microtome

./: .editorconfig  .envrc  .firebaserc  .gitignore  .jshintignore  .jshintrc  .travis.yml  BUILDING.md  CLAUDE.md  Cargo.toml  LICENSE  NOTES.md  README.md  _config.yml  bower-locker.bower.json  bower.json  gulpfile.js  index.html  index.md  package.json  params.json  rollup-config-app.js  rollup-config-lib.js  server-config-dev.json  setup_env.sh  setup_env_rc  tsconfig-lib.json  tsconfig.json  tsd.json  tslint.json  typings.json
app/: globals.d.ts  index.html  main.ts  manifest.json  printerVolumeView.ts  projector.html  slicePreview.ts  slicerApp.tsx  tsconfig.json
app-deprecated/: tsconfig.json
app-deprecated/elements/: routing.html
app-deprecated/styles/: app-theme.html  shared-styles.html
app/components/: microtomeApp.tsx  printerVolumeView.tsx  slicePreview.tsx
app/elements/: elements.html
app/scripts/: advanced_slicer.ts  app.js  app.ts  background.ts  core_threed.ts  printer_config.ts  serial-support.ts  slicer.ts  slicer_camera_nav.ts  units.ts
app/styles/: app-theme.html  main.css  shared-styles.html
app/ts/: actions.ts  core_threed.ts  projector.ts  serial-support.ts  slicer.ts  slicer_camera_nav.ts  tsconfig.json  units.ts
crates/isosurface-viewer/: Cargo.toml
crates/isosurface-viewer/src/: app.rs  camera.rs  cli.rs  headless.rs  main.rs  renderer.rs  viewport.rs
crates/isosurface-viewer/src/shaders/: blit.wgsl  fill_bg.wgsl  fill_black.wgsl  line.wgsl  phong.wgsl  wireframe.wgsl
crates/microtome-app/: Cargo.toml
crates/microtome-app/src/: app.rs  camera.rs  main.rs  picking.rs  slice_preview.rs  viewport.rs  viewport_renderer.rs
crates/microtome-app/src/app/: defaults.rs  helpers.rs  mod.rs  state.rs  ui_impl.rs
crates/microtome-app/src/shaders/: phong.wgsl  slice_overlay.wgsl
crates/microtome-app/src/ui/: config_editor.rs  file_dialogs.rs  mod.rs  panels.rs
crates/microtome-app/src/viewport_renderer/: helpers.rs  mod.rs  pipeline.rs  render.rs  tests.rs  types.rs
crates/microtome-core/: Cargo.toml
crates/microtome-core/src/: config.rs  error.rs  gpu.rs  job.rs  lib.rs  mesh.rs  scene.rs  slicer.rs  units.rs
crates/microtome-core/src/isosurface/: indicators.rs  kdtree.rs  kdtree_v2.rs  mesh_bvh.rs  mesh_output.rs  mesh_scan.rs  mod.rs  octree.rs  polymender.rs  qef.rs  rectilinear_grid.rs  scalar_field.rs  sign_gen.rs  vertex.rs  volume_data.rs
crates/microtome-core/src/mesh_repair/: context.rs  error.rs  features.rs  half_edge.rs  half_edge_ops.rs  mod.rs  pass.rs  pipeline.rs  quality.rs  reprojection.rs  spatial.rs  tangent.rs  tri_intersection.rs  vertex_class.rs  vertex_quadric.rs
crates/microtome-core/src/mesh_repair/passes/: angle_relax.rs  clean_mesh.rs  detect_self_intersect.rs  feature_smooth.rs  fill_holes.rs  isotropic_remesh.rs  mod.rs  remove_slivers.rs  repair_self_intersect.rs  reproject.rs  simplify_quadric.rs  taubin_smooth.rs  weld_vertices.rs
crates/microtome-core/src/shaders/: boolean_ops.wgsl  erode_dilate.wgsl  intersection.wgsl  overhang.wgsl  slice_extract.wgsl
crates/microtome-core/src/slicer/: mod.rs  pipeline.rs  tests.rs  types.rs
crates/microtome-core/tests/: repair_box_with_hole_regression.rs  repair_pipeline_end_to_end.rs  repair_v2_5_integration.rs  repair_v2_pipeline.rs  repair_v3_heavy.rs
lib/: advanced_slicer.ts  camera.ts  config.ts  core_threed.ts  index.ts  job.ts  materials.ts  printer.ts  slicer.ts  slicer_job.ts  tsconfig.json
lib/shaders/: intersection_shader_frag.glsl  xor_shader_frag.glsl
lib/ts/: advanced_slicer.ts  background.ts  core_threed.ts  globals.d.ts  index.ts  printer_config.ts  slicer_job.ts  toZipSlicer.ts  tsconfig.json  units.ts
local_typings/: chrome_serial.d.ts  threejs-extended.d.ts
scripts/: assemble_resources.js  copy_definitions.js  copy_resources.js  copy_shaders.js
specs/: rust-rewrite-plan.md
src/app/: index.html  main.ts  printerVolumeView.ts  slicePreview.ts  (+1 more)
typings/: tsd.d.ts
(+54 files in other folders)
