[workspace]
resolver = "2"
members = ["crates/microtome-core", "crates/microtome-app"]

[workspace.dependencies]
wgpu = "29"
egui = "0.34"
eframe = { version = "0.34", default-features = false, features = ["wgpu"] }
egui-wgpu = "0.34"
glam = { version = "0.29", features = ["bytemuck", "mint"] }
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "2"
anyhow = "1"
