[package]
name = "isosurface-viewer"
version = "0.1.0"
edition = "2024"

[features]
default = ["wayland", "x11"]
wayland = ["eframe/wayland"]
x11 = ["eframe/x11"]

[dependencies]
microtome-core = { path = "../microtome-core" }
eframe.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
wgpu.workspace = true
glam.workspace = true
bytemuck.workspace = true
log.workspace = true
env_logger = "0.11"
anyhow.workspace = true
rfd = "0.15"
clap = { version = "4", features = ["derive"] }
pollster = "0.4"
image.workspace = true
