[package]
name = "isosurface-viewer"
version = "0.1.0"
edition = "2024"

[features]
default = ["wayland", "x11"]
wayland = ["eframe/wayland"]
x11 = ["eframe/x11"]
# Surface KD-tree DC simplification options in the viewer. Off by default
# because the algorithm produces long-edge sliver triangles on flat faces;
# see microtome-core/Cargo.toml for the full story.
kdtree_simplification = ["microtome-core/kdtree_simplification"]

[dependencies]
microtome-core = { path = "../microtome-core" }
eframe.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
wgpu.workspace = true
glam.workspace = true
bytemuck.workspace = true
log.workspace = true
env_logger = "0.11"
anyhow.workspace = true
rfd = "0.15"
clap = { version = "4", features = ["derive"] }
pollster = "0.4"
image.workspace = true
