[package]
name = "microtome-app"
version = "0.1.0"
edition = "2024"

[dependencies]
microtome-core = { path = "../microtome-core" }
eframe.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
wgpu.workspace = true
glam.workspace = true
bytemuck.workspace = true
log.workspace = true
env_logger = "0.11"
anyhow.workspace = true
rfd = "0.15"
pollster = "0.4"
