[package]
name = "microtome-core"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu.workspace = true
glam.workspace = true
bytemuck.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
zip = { version = "2", default-features = false, features = ["deflate"] }
stl_io = "0.8"
tobj = "4.0"
pollster = "0.4"

[dev-dependencies]
naga = { version = "29", features = ["wgsl-in"] }
